example/08/ingress/fanout/foo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-foo
  namespace: fanoutns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      name: deploy-pod-foo
      labels:
        app: foo
    spec:
      containers:
      - name: foo-container
        image: whatwant/node-web:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: fanoutns
spec:
  selector:
    app: foo
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 8080
